# selenium-automation

./: .editorconfig  README.md  pyproject.toml  requirements.txt  settings.py
.github/workflows/: test.yaml
tests/: conftest.py  test_login.py
