[tool.poetry]
name = "selenium_automation"
version = "0.1.0"
description = "Pet project for testing selenium automation with GitHub Actions"
authors = ["Mohammed Mwijaa <mm.mwijaa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
selenium = "^4.5.0"
pytest-xdist = "^3.0.2"
pytest-html = "^3.2.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -n auto --html=./htmlcov/index.html"
testpaths = [
	"tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
